--- a/Calculadora/src/main/resources/com/example/calculadora/main.fxml
+++ b/Calculadora/src/main/resources/com/example/calculadora/main.fxml
@@ -2,16 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 
-<Pane prefHeight="340.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.calculadora.HelloController">
-   <children>
-      <GridPane fx:id="gridCalculadora" layoutX="-5.0" prefHeight="340.0" prefWidth="550.0">
+<BorderPane fx:id="borderPane" prefWidth="549.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.calculadora.HelloController">
+   <center>
+      <GridPane fx:id="gridCalculadora" prefHeight="340.0" prefWidth="550.0">
         <columnConstraints>
             <ColumnConstraints />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -32,16 +32,6 @@
             <TextArea fx:id="resultado" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" />
             <Button fx:id="ac" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="AC" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Button fx:id="positivoNegativo" layoutX="20.0" layoutY="122.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="+/-" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Button fx:id="sci" layoutX="165.0" layoutY="122.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="SCI" GridPane.columnIndex="1" GridPane.columnSpan="2">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
-            <Button fx:id="registro" layoutX="165.0" layoutY="122.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Registro" GridPane.columnIndex="3" GridPane.columnSpan="2">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
             <Button fx:id="cero" layoutX="165.0" layoutY="122.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <Button fx:id="uno" layoutX="20.0" layoutY="324.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="1" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Button fx:id="siete" layoutX="20.0" layoutY="274.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="7" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -60,7 +50,59 @@
             <Button fx:id="restar" layoutX="165.0" layoutY="173.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="-" GridPane.columnIndex="4" GridPane.rowIndex="4" />
             <Button fx:id="sumar" layoutX="310.0" layoutY="224.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="+" GridPane.columnIndex="4" GridPane.rowIndex="5" />
             <Button fx:id="igual" layoutX="310.0" layoutY="274.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="60.0" prefWidth="139.0" text="=" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <Button fx:id="sci" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="SCI" GridPane.columnIndex="1" GridPane.columnSpan="2">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+            <Button fx:id="registro" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Registro" GridPane.columnIndex="3" GridPane.columnSpan="2">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
          </children>
       </GridPane>
-   </children>
-</Pane>
+   </center>
+   <left>
+      <GridPane fx:id="panelSci" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="cerrarSci" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: orange;" text="&gt;&gt;" />
+            <Button fx:id="sin" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="sin" GridPane.rowIndex="1" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="x!" GridPane.rowIndex="2" fx:id="x" />
+            <Button fx:id="raiz" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="√" GridPane.rowIndex="3" />
+            <Button fx:id="elevado" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="^ " GridPane.rowIndex="4" />
+            <Button fx:id="ln" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="ln" GridPane.rowIndex="5" />
+            <Button fx:id="e" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="e" GridPane.rowIndex="6" />
+         </children>
+      </GridPane>
+   </left>
+   <right>
+      <GridPane fx:id="panelRegistro" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="109.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="298.0" minHeight="10.0" prefHeight="295.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="66.0" minHeight="0.0" prefHeight="3.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextArea fx:id="registroArea" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+            <Button fx:id="cerrarRegistro" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="X" textFill="RED" />
+            <Button fx:id="borrarRegistro" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Borrar" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+   </right>
+</BorderPane>
