--- a/Calculadora/src/main/resources/com/example/calculadora/main.fxml
+++ b/Calculadora/src/main/resources/com/example/calculadora/main.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" prefWidth="549.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.calculadora.HelloController">
+<BorderPane fx:id="borderPane" prefHeight="340.0" prefWidth="579.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.calculadora.HelloController">
    <center>
       <GridPane fx:id="gridCalculadora" prefHeight="340.0" prefWidth="550.0">
         <columnConstraints>
@@ -43,7 +43,7 @@
             <Button fx:id="nueve" layoutX="20.0" layoutY="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="9" GridPane.columnIndex="3" GridPane.rowIndex="3" />
             <Button fx:id="seis" layoutX="20.0" layoutY="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="6" GridPane.columnIndex="3" GridPane.rowIndex="4" />
             <Button fx:id="tres" layoutX="20.0" layoutY="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="3" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-            <Button fx:id="numeroE" layoutX="20.0" layoutY="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="E" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <Button fx:id="e" layoutX="20.0" layoutY="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="E" GridPane.columnIndex="3" GridPane.rowIndex="6" />
             <Button fx:id="dividir" layoutX="20.0" layoutY="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="/" GridPane.columnIndex="4" GridPane.rowIndex="2" />
             <Button fx:id="multiplicar" layoutX="20.0" layoutY="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="X" GridPane.columnIndex="4" GridPane.rowIndex="3" />
             <Button fx:id="restar" layoutX="165.0" layoutY="173.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="-" GridPane.columnIndex="4" GridPane.rowIndex="4" />
@@ -63,7 +63,7 @@
       </GridPane>
    </center>
    <left>
-      <GridPane fx:id="panelSci" BorderPane.alignment="CENTER">
+      <GridPane fx:id="panelSci" prefHeight="340.0" prefWidth="88.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -88,7 +88,7 @@
       </GridPane>
    </left>
    <right>
-      <GridPane fx:id="panelRegistro" BorderPane.alignment="CENTER">
+      <GridPane fx:id="panelRegistro" prefHeight="340.0" prefWidth="153.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -98,9 +98,9 @@
           <RowConstraints maxHeight="66.0" minHeight="0.0" prefHeight="3.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextArea fx:id="registroArea" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+            <TextArea fx:id="registroArea" prefHeight="298.0" prefWidth="129.0" GridPane.rowIndex="1" />
             <Button fx:id="cerrarRegistro" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="X" textFill="RED" />
-            <Button fx:id="borrarRegistro" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Borrar" GridPane.rowIndex="2" />
+            <Button fx:id="borrarRegistro" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Borrar" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </right>
