--- a/JsonEmojis/src/main/resources/com/example/JsonEmojis/hello-view.fxml
+++ b/JsonEmojis/src/main/resources/com/example/JsonEmojis/hello-view.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,32 +13,28 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.JsonEmojis.HelloController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.JsonEmojis.HelloController">
    <center>
-      <TableView fx:id="tablaEmojis" prefHeight="350.0" prefWidth="244.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="tablaEmojis" maxHeight="300.0" maxWidth="-Infinity" minHeight="100.0" minWidth="-Infinity" prefHeight="219.0" prefWidth="344.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="columnaNombre" prefWidth="75.0" text="Nombre" />
-          <TableColumn fx:id="columnaCategoria" prefWidth="75.0" text="Categoría" />
-            <TableColumn fx:id="columnaEmoji" prefWidth="75.0" text="Emoji" />
+          <TableColumn fx:id="columnaNombre" prefWidth="115.0" text="Nombre" />
+          <TableColumn fx:id="columnaCategoria" prefWidth="119.0" text="Categoría" />
+            <TableColumn fx:id="columnaEmoji" prefWidth="109.0" text="Codigo" />
         </columns>
       </TableView>
    </center>
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu mnemonicParsing="false" text="App">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem fx:id="menuCerrar" mnemonicParsing="false" text="Cerrar" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu mnemonicParsing="false" text="Links">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem fx:id="menuApi" mnemonicParsing="false" text="API" />
+                  <MenuItem fx:id="menuGithub" mnemonicParsing="false" text="Github" />
             </items>
           </Menu>
         </menus>
@@ -54,14 +49,10 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <RadioButton mnemonicParsing="false" text="RadioButton" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" text="RadioButton" />
-         </children>
       </GridPane>
    </left>
    <right>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane prefHeight="315.0" prefWidth="131.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -71,8 +62,8 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="buttonJSON" mnemonicParsing="false" text="Agregar datos" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
             <Button fx:id="buttonAleatorio" mnemonicParsing="false" text="Aleatorio" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <Button fx:id="buttonDetalles" mnemonicParsing="false" text="Ver detalles" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
    </right>
@@ -80,18 +71,22 @@
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <ComboBox fx:id="comboBoxCategorias" prefWidth="150.0" promptText="Seleccionar" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Categorías" GridPane.columnIndex="1" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Emoji" GridPane.columnIndex="2" />
             <ComboBox fx:id="comboBoxEmoji" prefWidth="150.0" promptText="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button fx:id="buttonJSON" mnemonicParsing="false" text="Agregar datos" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </bottom>
